--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,33 @@ services:
     privileged: true
     ports:
       - "6380:6379" # Map container's Redis port to host machine's port
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
+    container_name: elasticsearch
+    volumes:
+      - elasticsearch-data:/usr/share/elasticsearch/data
+    ports:
+      - ${ES_PORT}:9200
+    restart: always
+    environment:
+      - xpack.security.enabled=false
+      - discovery.type=single-node
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+  # kibana:
+  #   depends_on:
+  #     - elasticsearch
+  #   image: docker.elastic.co/kibana/kibana:${STACK_VERSION}
+  #   container_name: kibana
+  #   volumes:
+  #     - kibana-data:/usr/share/kibana/data
+  #   ports:
+  #    - ${KIBANA_PORT}:5601
+  #   restart: always
+  #   environment:
+  #     - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
   redis-commander:
     image: rediscommander/redis-commander:latest
     container_name: nestjs-discussion-redis-commander
@@ -45,3 +72,8 @@ services:
 networks:
   postgres:
     driver: bridge
+volumes:
+  elasticsearch-data:
+    driver: local
+  kibana-data:
+    driver: local
