--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@bull-board/api": "^5.10.2",
     "@bull-board/express": "^5.10.2",
     "@bull-board/nestjs": "^5.10.2",
+    "@elastic/elasticsearch": "^8.11.0",
     "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/bull": "^10.0.1",
     "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/elasticsearch": "^10.0.1",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/passport": "^10.0.2",
