--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,29 @@
 version: "3"
 services:
-  postgres:
-    container_name: nestjs-discussion-postgres
-    image: postgres:12-bullseye
-    ports:
-    - "5432:5432"
-    volumes:
-    - ./data/postgres:/var/lib/postgresql/data
-    env_file:
-    - docker.env
-    networks:
-    - postgres
-  pgadmin:
-    links:
-    - postgres:postgres
-    container_name: nestjs-discussion-pgadmin
-    image: dpage/pgadmin4
-    ports:
-    - "8080:80"
-    volumes:
-    - ./data/pgadmin:/root/.pgadmin
-    env_file:
-    - docker.env
-    networks:
-    - postgres
+  # postgres:
+  #   container_name: nestjs-discussion-postgres
+  #   image: postgres:12-bullseye
+  #   ports:
+  #   - "5432:5432"
+  #   volumes:
+  #   - ./data/postgres:/var/lib/postgresql/data
+  #   env_file:
+  #   - docker.env
+  #   networks:
+  #   - postgres
+  # pgadmin:
+  #   links:
+  #   - postgres:postgres
+  #   container_name: nestjs-discussion-pgadmin
+  #   image: dpage/pgadmin4
+  #   ports:
+  #   - "8080:80"
+  #   volumes:
+  #   - ./data/pgadmin:/root/.pgadmin
+  #   env_file:
+  #   - docker.env
+  #   networks:
+  #   - postgres
   redis:
     image: redis:latest
     container_name: nestjs-discussion-redis-container
@@ -32,21 +32,43 @@ services:
     privileged: true
     ports:
       - "6380:6379" # Map container's Redis port to host machine's port
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
-    container_name: elasticsearch
-    volumes:
-      - elasticsearch-data:/usr/share/elasticsearch/data
-    ports:
-      - ${ES_PORT}:9200
-    restart: always
-    environment:
-      - xpack.security.enabled=false
-      - discovery.type=single-node
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
+  # es01:
+  #   image: docker.elastic.co/elasticsearch/elasticsearch:7.9.1
+  #   container_name: es01
+  #   environment:
+  #     - node.name=es01
+  #     - cluster.name=es-docker-cluster
+  #     - bootstrap.memory_lock=true
+  #     - "ES_JAVA_OPTS=-Xms2g -Xmx2g"
+  #   ulimits:
+  #     memlock:
+  #       soft: -1
+  #       hard: -1
+  #   volumes:
+  #     - ./data/data01:/usr/share/elasticsearch/data
+  #   ports:
+  #     - 9300:9200
+  #   networks:
+  #     - elastic
+
+  # elasticsearch:
+  #   image: docker.elastic.co/elasticsearch/elasticsearch:7.9.1
+  #   container_name: elasticsearch
+  #   volumes:
+  #     - elasticsearch-data:/usr/share/elasticsearch/data
+  #   ports:
+  #     - ${ES_PORT}:9200
+  #   restart: always
+  #   environment:
+  #     - cluster.name=es-docker-cluster
+  #     - bootstrap.memory_lock=true
+  #     - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
+  #     - ELASTICSEARCH_USERNAME=elastic
+  #     - ELASTICSEARCH_PASSWORD=admin
+  #   ulimits:
+  #     memlock:
+  #       soft: -1
+  #       hard: -1
   # kibana:
   #   depends_on:
   #     - elasticsearch
@@ -72,8 +94,13 @@ services:
 networks:
   postgres:
     driver: bridge
+  elastic:
+    driver: bridge
+
 volumes:
   elasticsearch-data:
     driver: local
   kibana-data:
+    driver: local
+  data01:
     driver: local
