--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,17 +70,17 @@ services:
   #       soft: -1
   #       hard: -1
   # kibana:
-  #   depends_on:
-  #     - elasticsearch
-  #   image: docker.elastic.co/kibana/kibana:${STACK_VERSION}
+  #   image: docker.elastic.co/kibana/kibana:7.17.16
   #   container_name: kibana
   #   volumes:
-  #     - kibana-data:/usr/share/kibana/data
-  #   ports:
-  #    - ${KIBANA_PORT}:5601
-  #   restart: always
+  #     - ./data/kibana-data:/usr/share/kibana/data
   #   environment:
-  #     - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+  #     - ELASTICSEARCH_HOSTS=http://127.0.0.1:9200   # Point to your local Elasticsearch
+  #   ports:
+  #    - 5601:5601
+  #   restart: always
+  #   network_mode: host
+
   redis-commander:
     image: rediscommander/redis-commander:latest
     container_name: nestjs-discussion-redis-commander
