--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^7.2.0",
     "@nestjs/typeorm": "^10.0.0",
     "bcryptjs": "^2.4.3",
     "bull": "^4.11.3",
@@ -60,6 +61,7 @@
     "pg2": "^0.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^5.0.0",
     "transformer": "^1.2.8",
     "typeorm": "^0.3.17"
   },
